# turbovault-engine

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_SETUP.md  CLI_GUIDE.md  CONTRIBUTING.md  Dockerfile  ENVIRONMENT_VARIABLES.md  README.md  RELEASE_CHECKLIST.md  RELEASING.md  TurboVault TPCH Data.xlsx  TurboVault_TPCH_Data.db  TurboVault_TPCH_Data.xlsx  commit_message.txt  config.example.yml  docker-compose.yml  pyproject.toml  release-please-config.json  turbovault.example.yml  verify_naming_standards.py
.agent/rules/: coding-guidelines.md  django-architecture.md  domain-model-contract.md  project-context.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  release-please.yml  release.yml
backend/: check_db.py  db.sqlite3.bak  db_state.txt  debug_keys.py  list_tables.py  manage.py  pip_list.txt  reproduce_bug.py  traceback.txt  verify_export.py  verify_import.py  verify_import_clean.py  verify_l0003_minimal.py  verify_logic.py  verify_prejoins.py  verify_recursive.py  verify_sqlite_fix.py
backend/docs/: 05_export_flow_specification.md  06_dbt_generation.md
backend/engine/: admin.py  admin_site.py  apps.py  mcp.py
backend/engine/cli/: __init__.py  installation.json  main.py
backend/engine/migrations/: 0001_initial.py  0002_add_timestamps_to_source_models.py  0002_stagingcolumn_linkhubsourcemapping_staging_column.py  0003_hub_hubcolumn_hubsourcemapping.py  0003_remove_linkhubsourcemapping_prejoin_extraction_column_and_more.py  0004_change_effectivity_satellite_default.py  0004_hubsourcemapping_staging_column_and_more.py  0005_alter_satellitecolumn_options_and_more.py  0005_make_sort_order_nullable.py  0006_add_hub_to_hubsourcemapping.py  0006_add_project_directory.py  0007_populate_hub_field.py  0007_satellitecolumn_column_sort_order.py  0008_make_hub_required.py  0008_referencetable_group_alter_linkcolumn_column_type_and_more.py  0009_pit_group.py  0009_remove_hubsourcemapping_hub_snapshotcontroltable_and_more.py  0010_importrun.py  0010_satellite_satellitecolumn.py  0011_add_source_table_to_satellite.py  0011_generationrun.py  0012_add_link_models.py  0012_link_create_record_tracking_satellite.py  0013_alter_hub_create_effectivity_satellite.py  0013_refactor_link_models.py  0014_remove_link_parent_hub.py  0015_add_group_model.py  0016_referencetable_referencetablesatelliteassignment.py  0017_pit.py  0018_fix_cascade_deletion.py  0019_add_prejoin_models.py  0020_add_prejoin_to_link_mapping.py  0021_add_name_to_snapshot_control.py  0022_templatecategory_alter_snapshotcontroltable_name_and_more.py  0023_alter_linkcolumn_options_and_more.py  (+6 more)
backend/engine/models/: hubs.py  (+17 more)
backend/tests/: __init__.py  conftest.py  test_config_schema.py  test_embedding.py  test_generator.py  test_telemetry.py  test_validators.py
backend/turbovault/: asgi.py  settings.py  urls.py  views.py  wsgi.py
docs/: 00_index.md  01_overview.md  02_domain_model.md  03_config_schema.md  04_import_flow_specification.md  CI_SETUP.md  CLI_GUIDE.md  DATABASE_CONFIGURATION.md  ENVIRONMENT_VARIABLES.md  RELEASE_CHECKLIST.md  RELEASING.md  configuration.md  index.md  workspace.md
docs/01_introduction/: 01_overview.md  02_architecture.md  _category_.json
docs/02_getting-started/: 01_cli-reference.md  02_workspace-setup.md  03_step-by-step-example.md  04_admin-guide.md  05_mcp-server.md
docs/03_configuration/: 01_overview.md  02_database.md  03_project-schema.md  04_env-variables.md
docs/04_concepts/: 01_domain-model.md  02_excel-metadata-format.md  03_validation-rules.md  04_json-import.md  05_model-import-schema.md  06_import-pipeline.md  07_generation-pipeline.md
docs/concepts/: domain-model.md
docs/configuration/: database.md  env-variables.md  project-schema.md
docs/getting-started/: cli-reference.md  workspace-setup.md
docs/introduction/: architecture.md  overview.md
scripts/: README.md  populate_sample_data.py  setup-dev.ps1  setup-dev.sh
(+145 files in other folders)
