[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "backend"}
packages = [
    "engine",
    "engine.cli",
    "engine.cli.commands",
    "engine.cli.utils",
    "engine.models",
    "engine.services",
    "engine.services.export",
    "engine.services.export.exporters",
    "engine.services.generation",
    "turbovault"
]

[tool.setuptools.package-data]
"engine.services.generation" = ["templates/**/*.j2"]

[project]
name = "turbovault-engine"
version = "0.7.1"
description = "CLI-first Django-based engine for Data Vault modeling and dbt project generation"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "TurboVault Contributors"}
]
keywords = ["data-vault", "dbt", "data-warehouse", "data-modeling", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "Django>=6.0,<7.0",
    "python-dateutil>=2.8,<3.0",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "jinja2>=3.1,<4.0",
    "typer>=0.9",
    "rich>=13.0,<15.0",
    "questionary>=2.0,<3.0",
    "pandas>=2.0,<3.0",
    "openpyxl>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.1.0",
    "mypy>=1.7",
    "django-stubs>=4.2",
    "pytest>=8.0",
    "pytest-django>=4.5",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/ScalefreeCOM/turbovault-engine"
Repository = "https://github.com/ScalefreeCOM/turbovault-engine"
Issues = "https://github.com/ScalefreeCOM/turbovault-engine/issues"

[project.scripts]
turbovault = "engine.cli.main:app"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "migrations",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DJ",   # flake8-django
]
ignore = [
    "E501",  # line too long (handled by black)
    "DJ001", # Avoid null=True on string fields (intentional design choice)
    "DJ012", # Model method ordering (not critical for functionality)
    "B904",  # Exception handling with 'from' clause (style preference)
    "E402",  # Module level imports not at top (needed for Django setup)
    "B008",  # Function calls in default arguments (required by Typer CLI)
    "N806",  # Variable naming (Django's User model convention)
]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "turbovault.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "turbovault.settings"
pythonpath = ["backend"]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
